@@ -8,6 +8,7 @@ Changes since 5.0.rc1
 * FIX treat data value read as "NaN" the same as we would "1/0"
 * FIX handle pointtype PT_CHARACTER in 3D plots
 * FIX do not store long strings (e.g. epslatex_header) in terminal options array
+* FIX [maybe] extra resize of initial qt window may fix problems on OSX, Debian
 
 New features, changes and fixes in gnuplot version 5.0
 ======================================================
