@@ -1,3 +1,10 @@
+2014-06-09  Daniel J Sebald <daniel.sebald@ieee.org>
+
+	* src/qtterminal/QtGnuplotWidget.cpp (processEvent):  Always "resize"
+	the initial plot to its own size.  This may work around strangeness on
+	some systems that create the initial qt plot window with the wrong size.
+	Bug #1417 (forwarded from Debian) Patch #661
+
 2014-06-09  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* src/win/wgdiplus.cpp src/win/wgraph.c src/win/wgnuplib.h
